Modified the surefire configuration to avoid some OOM errors
git-svn-id: https://svn.apache.org/repos/asf/directory/apacheds/branches/apacheds-schema@882205 13f79535-47bb-0310-9956-ffa450edef68